Tweak for issue #311 (messages cut off)

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -95,15 +95,12 @@ html,body{
 .message-workshop-image{
     margin-top:20px;
 }
-
 .message-avatar{
     min-width: 70px;
 }
-
 .message-content{
-    max-width:680px;
+    max-width:650px;
 }
-
 .fullWidth{ width:100%; }
 
 .horizontal-list> li {
